[package]
name = "nu_plugin_x509"
version = "0.1.5"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/nu_plugin_x509"
repository = "https://github.com/yybit/nu_plugin_x509"
description = "A nushell plugin for working with x509 certificates."
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["nu", "plugin", "x509"]

[dependencies]
nu-plugin = "0.104.1"
nu-protocol = { version = "0.104.1", features = ["plugin"] }
rcgen = "0.13.2"
x509-parser = "0.17.0"
chrono = "0.4.41"
hex = "0.4.3"
oid-registry = { version = "0.8.1", features = ["crypto"] }
time = "0.3.41"